@@ -11,7 +11,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import com.cannontech.common.gui.util.Colors;
+import com.cannontech.common.YukonColorPalette;
 import com.cannontech.common.i18n.MessageSourceAccessor;
 import com.cannontech.core.dao.StateGroupDao;
 import com.cannontech.core.dynamic.PointValueHolder;
@@ -60,14 +60,9 @@ public class ZbProblemDevicesController {
         LiteStateGroup states = stateGroupDao.getStateGroup(StateGroupUtils.STATEGROUP_COMMISSIONED_STATE);
         Map<Double, String> stateColorMap = Maps.newHashMap();
         for (LiteState state : states.getStatesList()) {
-            String colorString;
             int fgColor = state.getFgColor();
-            if (fgColor == Colors.RED_ID) {
-                colorString = "#D14836"; // yukon.css .error
-            } else {
-                colorString = Colors.getColorString(fgColor);
-            }
-            stateColorMap.put(new Double(state.getStateRawState()), colorString);
+            String colorString = YukonColorPalette.getColor(fgColor).getHexValue();
+            stateColorMap.put(Double.valueOf(state.getStateRawState()), colorString);
         }
         model.addAttribute("stateColorMap", stateColorMap);
         return "operator/inventory/zbProblemDevices.jsp";
